# ravensys-utils

./: CMakeLists.txt  LICENSES.aggregated  README.md
libdl/: CMakeLists.txt  dl_stub.c
mtree/: CMakeLists.txt  bsdvis.h  crc_extern.h  create.c  excludes.c  extern.h  fgetln.c  forsunos.h  mtree.h  setmode.c  sha.h  sha1hl.h  spec.c  unvis.c  vis.c
patch/: CMakeLists.txt  inp.c  patch.1  pch.c
realpath/: CMakeLists.txt  LICENSE  bsd_realpath.c
rpcgen/: CMakeLists.txt  rpcgen.1
selector/: CMakeLists.txt  README  selector.c.in
sha256/: CMakeLists.txt  main.c  md5.h  md5c.c  sha256.h
uname/: CMakeLists.txt  README  uname.c.in
which/: CMakeLists.txt  which.1
