cmake_minimum_required(VERSION 3.16)
project(ravensys-utils)

SET(CMAKE_SKIP_BUILD_RPATH  TRUE)

add_subdirectory(libdl)
add_subdirectory(sha256)
add_subdirectory(mtree)
add_subdirectory(which)
add_subdirectory(patch)
add_subdirectory(selector)
add_subdirectory(uname)
add_subdirectory(rpcgen)
if(CMAKE_SYSTEM_NAME MATCHES "NetBSD")
add_subdirectory(realpath)
endif()
